fix: broken TimePicker Container on iphone se display

--- a/Event_Tracker_App/Event.Tracker.Web/src/pages/TimePicker.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/pages/TimePicker.css
@@ -11,7 +11,7 @@
     top: 0;
     padding: 15vh 2%;
 
-    height: 35%;
+    height: 40vh;
     display: flex;
     gap: 5%;
     flex-wrap: wrap;
